test/parse/assert/bad-invoke-no-module.txt
;;; ERROR: 1
;;; FLAGS: --spec
(invoke "foo")
(;; STDERR ;;;
out/test/parse/assert/bad-invoke-no-module.txt:3:2: error: unknown module
(invoke "foo")
 ^^^^^^
;;; STDERR ;;)
